# Sim_Fisicas_BACC

./: Goldberg.cpp  README.md
Goldberg/: CMakeLists.txt  README.md  main.cpp
Poligonos/: CMakeLists.txt  README.md  main.cpp
Tema_2/: CMakeLists.txt  README.md  main.cpp
hola_jupiter/: README.md  main.cpp
hola_luna/: CMakeLists.txt  README.md  main.cpp
hola_nuevo_nevo_mundo/: CMakeLists.txt  README.md  main.cpp
joints/: CMakeLists.txt  Engrane.cpp  Prismatica.cpp  Rotacion.cpp  Rueda.cpp  Soldadura.cpp  main.cpp
